--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,19 +9,25 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+    - name: Simple Telegram Notification
+      if: always()
+      run: |
+        curl -s -X POST "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage" \
+          -d chat_id="${{ secrets.TELEGRAM_CHAT_ID }}" \
+          -d text="Deploy ${{ job.status }} for ${{ github.repository }}"
+    # - name: Checkout code
+    #   uses: actions/checkout@v3
     
-    - name: Deploy to VPS
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.VPS_HOST }}
-        username: ${{ secrets.VPS_USERNAME }}
-        key: ${{ secrets.VPS_SSH_KEY }}
-        script: |
-          cd /var/www/CI-CD/
-          git pull origin main
-          docker-compose down
-          docker-compose build --no-cache
-          docker-compose up -d
-          docker image prune -f
+    # - name: Deploy to VPS
+    #   uses: appleboy/ssh-action@master
+    #   with:
+    #     host: ${{ secrets.VPS_HOST }}
+    #     username: ${{ secrets.VPS_USERNAME }}
+    #     key: ${{ secrets.VPS_SSH_KEY }}
+    #     script: |
+    #       cd /var/www/CI-CD/
+    #       git pull origin main
+    #       docker-compose down
+    #       docker-compose build --no-cache
+    #       docker-compose up -d
+    #       docker image prune -f
