--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,58 +9,45 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-    
-    # - name: Deploy to VPS
-    #   id: deploy
-    #   uses: appleboy/ssh-action@master
-    #   with:
-    #     host: ${{ secrets.VPS_HOST }}
-    #     username: ${{ secrets.VPS_USERNAME }}
-    #     key: ${{ secrets.VPS_SSH_KEY }}
-    #     script: |
-    #       cd /var/www/CI-CD/
-    #       git pull origin main
-    #       docker-compose down
-    #       docker-compose build --no-cache
-    #       docker-compose up -d
-    #       docker image prune -f
-    
     - name: Send Telegram Notification
-      if: always()
-      run: |
-        # Các biến từ GitHub context
-        DEPLOY_STATUS="${{ job.status }}"
-        REPO_NAME="${{ github.repository }}"
-        COMMIT_MESSAGE="${{ github.event.head_commit.message }}"
-        COMMIT_AUTHOR="${{ github.event.head_commit.author.name }}"
-        COMMIT_SHA="${{ github.sha }}"
-        BRANCH="${{ github.ref_name }}"
-        
-        # Tạo các URLs
-        COMMIT_URL="https://github.com/${{ github.repository }}/commit/$COMMIT_SHA"
-        REPO_URL="https://github.com/${{ github.repository }}"
-        ACTION_RUN_URL="https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
-        SHORT_SHA="${COMMIT_SHA:0:7}"
-        
-        # Emoji theo trạng thái
-        if [ "$DEPLOY_STATUS" = "success" ]; then
-          STATUS_EMOJI="✅"
-          STATUS_TEXT="*SUCCESS*"
-          STATUS_DESC="Deployed successfully!"
-        else
-          STATUS_EMOJI="❌"
-          STATUS_TEXT="*FAILED*"
-          STATUS_DESC="Deployment failed!"
-        fi
-        
-        # Tạo message với format đẹp
-        MESSAGE="$STATUS_EMOJI *DEPLOY $STATUS_TEXT* $STATUS_EMOJI
+  if: always()
+  run: |
+    DEPLOY_STATUS="${{ job.status }}"
+    REPO_NAME="${{ github.repository }}"
+    COMMIT_MESSAGE="${{ github.event.head_commit.message }}"
+    COMMIT_AUTHOR="${{ github.event.head_commit.author.name }}"
+    COMMIT_SHA="${{ github.sha }}"
+    BRANCH="${{ github.ref_name }}"
 
-        # Gửi thông báo đến Telegram
-        curl -s -X POST "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage" \
-          -d chat_id="${{ secrets.TELEGRAM_CHAT_ID }}" \
-          -d text="$MESSAGE" \
-          -d parse_mode="Markdown" \
-          -d disable_web_page_preview="true"
+    COMMIT_URL="https://github.com/${{ github.repository }}/commit/$COMMIT_SHA"
+    REPO_URL="https://github.com/${{ github.repository }}"
+    ACTION_RUN_URL="https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+    SHORT_SHA="${COMMIT_SHA:0:7}"
+
+    if [ "$DEPLOY_STATUS" = "success" ]; then
+      STATUS_EMOJI="✅"
+      STATUS_TEXT="*SUCCESS*"
+      STATUS_DESC="Deployed successfully!"
+    else
+      STATUS_EMOJI="❌"
+      STATUS_TEXT="*FAILED*"
+      STATUS_DESC="Deployment failed!"
+    fi
+
+    read -r -d '' MESSAGE <<EOF || true
+$STATUS_EMOJI *DEPLOY $STATUS_TEXT*
+
+📦 *Repo:* $REPO_NAME
+🌿 *Branch:* $BRANCH
+🆔 *Commit:* $SHORT_SHA
+👤 *Author:* $COMMIT_AUTHOR
+📝 *Message:* $COMMIT_MESSAGE
+
+🚀 Action: $ACTION_RUN_URL
+EOF
+
+    curl -s -X POST "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage" \
+      -d chat_id="${{ secrets.TELEGRAM_CHAT_ID }}" \
+      -d text="$MESSAGE" \
+      -d parse_mode="Markdown" \
+      -d disable_web_page_preview="true" || true
