--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,39 +10,20 @@ jobs:
     
     steps:
     - name: Send Telegram Notification
-  if: always()
-  run: |
-    DEPLOY_STATUS="${{ job.status }}"
-    REPO_NAME="${{ github.repository }}"
-    COMMIT_MESSAGE="${{ github.event.head_commit.message }}"
-    COMMIT_AUTHOR="${{ github.event.head_commit.author.name }}"
-    COMMIT_SHA="${{ github.sha }}"
-    BRANCH="${{ github.ref_name }}"
+        if: always()
+        run: |
+          STATUS="${{ job.status }}"
+          ACTION_URL="https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
 
-    COMMIT_URL="https://github.com/${{ github.repository }}/commit/$COMMIT_SHA"
-    ACTION_RUN_URL="https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
-    SHORT_SHA="${COMMIT_SHA:0:7}"
+          if [ "$STATUS" = "success" ]; then
+            MESSAGE="✅ DEPLOY SUCCESS
+      Action: $ACTION_URL"
+          else
+            MESSAGE="❌ DEPLOY FAILED
+      Action: $ACTION_URL"
+          fi
 
-    if [ "$DEPLOY_STATUS" = "success" ]; then
-      STATUS_EMOJI="✅"
-      STATUS_TEXT="SUCCESS"
-    else
-      STATUS_EMOJI="❌"
-      STATUS_TEXT="FAILED"
-    fi
+          curl -s -X POST "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage" \
+            -d chat_id="${{ secrets.TELEGRAM_CHAT_ID }}" \
+            -d text="$MESSAGE" || true
 
-    MESSAGE="$STATUS_EMOJI DEPLOY $STATUS_TEXT
-
-Repo: $REPO_NAME
-Branch: $BRANCH
-Commit: $SHORT_SHA
-Author: $COMMIT_AUTHOR
-Message: $COMMIT_MESSAGE
-
-Action: $ACTION_RUN_URL
-"
-
-    curl -s -X POST "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage" \
-      -d chat_id="${{ secrets.TELEGRAM_CHAT_ID }}" \
-      -d text="$MESSAGE" \
-      -d disable_web_page_preview="true" || true
